--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chiru Marius Portofolio</title>
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body></body>
+
+  <body>
+    <header class="main-header"></header>
+
+    <div>
+      <p>Simple <span> paragraph</span></p>
+    </div>
+    <h1>Important Title</h1>
+    <p class="main-p">this is just a simple paragraph 2</p>
+
+    <div class="div-test"></div>
+
+    <section></section>
+
+    <nav></nav>
+    <footer></footer>
+  </body>
 </html>
