--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <body>
     <header class="main-header"></header>
+    <div class="image"></div>
 
     <div>
       <p>Simple <span> paragraph</span></p>
